# ackermann_nav_thesis

./: .gitignore  README.md
ackermann_thesis/: package.xml  setup.cfg  setup.py
ackermann_thesis/ackermann_thesis/: manual_control_node.py  mock_lidar_publisher.py  test_nav_node.py
ackermann_thesis/config/: minimal_bridge.yaml
ackermann_thesis/launch/: minimal_sim.launch.py  test_nav.launch.py
